Remove crontab file and update Dockerfile to create cron job directly. Refactor script.py for improved logging and modularity, integrating FTP log processing into a dedicated service.

--- a/E1/Dockerfile
+++ b/E1/Dockerfile
@@ -2,19 +2,29 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Copier d'abord requirements.txt pour optimiser le cache Docker
+COPY requirements.txt /app/requirements.txt
+
 # Installer cron et dépendances Python
 RUN apt-get update && \
     apt-get install -y cron && \
     pip install --no-cache-dir -r requirements.txt && \
-    apt-get clean
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Copier les fichiers du parser
-COPY main.py /app/main.py
-COPY crontab.txt /etc/cron.d/my-cron
-COPY requirements.txt /app/requirements.txt
+# Copier les fichiers du service
+COPY ftp_log_service.py /app/ftp_log_service.py
+COPY script.py /app/script.py
 
-# Appliquer la crontab
-RUN chmod 0644 /etc/cron.d/my-cron && \
-    crontab /etc/cron.d/my-cron
+# Rendre le script exécutable
+RUN chmod +x /app/script.py
+
+# Créer la tâche cron directement et l'installer
+RUN echo "0 8 * * * root python3 /app/script.py >> /app/cron.log 2>&1" > /etc/cron.d/log-parser && \
+    chmod 0644 /etc/cron.d/log-parser && \
+    crontab /etc/cron.d/log-parser
+
+# Créer le fichier de log
+RUN touch /app/cron.log
 
 CMD ["cron", "-f"]
