Remove obsolete files and configurations related to FTP log processing, including clean_database.py, Dockerfile, requirements.txt, script.py, and test_service.py. Update docker-compose.yaml to reflect changes in the build context for the parser service.

--- a/E1/docker-compose.yaml
+++ b/E1/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
         restart: unless-stopped
 
     parser:
-        build: .
+        build: ./script
         container_name: log_parser
         depends_on:
             - ftp
