--- a/E1/docker-compose.yaml
+++ b/E1/docker-compose.yaml
@@ -30,6 +30,26 @@ services:
             - "5432:5432"
         restart: unless-stopped
 
+    api:
+        build: ./api
+        container_name: fastapi_server
+        depends_on:
+            - db
+        environment:
+            - DB_HOST=db
+            - DB_NAME=${POSTGRES_DB}
+            - DB_USER=${POSTGRES_USER}
+            - DB_PASS=${POSTGRES_PASSWORD}
+            - POSTGRES_HOST=db
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        ports:
+            - "8000:8000"
+        volumes:
+            - ./api:/app
+        restart: unless-stopped
+
     parser:
         build: ./script
         container_name: log_parser
