--- a/E1/docker-compose.yaml
+++ b/E1/docker-compose.yaml
@@ -57,15 +57,15 @@ services:
             - ftp
             - db
         environment:
-            - FTP_HOST=${FTP_HOST}
+            - FTP_HOST=ftp
             - FTP_USER=${FTP_USER}
             - FTP_PASS=${FTP_PASS}
-            - DB_HOST=${DB_HOST}
-            - DB_NAME=${DB_NAME}
-            - DB_USER=${DB_USER}
-            - DB_PASS=${DB_PASS}
+            - POSTGRES_HOST=${POSTGRES_HOST}
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         volumes:
-            - .:/app
+            - ./script:/app
         restart: unless-stopped
 
 volumes:
