--- a/E1/script/Dockerfile
+++ b/E1/script/Dockerfile
@@ -21,7 +21,7 @@ RUN chmod +x /app/script.py
 
 # Créer la tâche cron directement et l'installer
 RUN echo "PATH=/usr/local/bin:/usr/bin:/bin" > /etc/cron.d/log-parser && \
-    echo "* 8 * * * /usr/local/bin/python3 /app/script/test_service.py >> /app/cron.log 2>&1" >> /etc/cron.d/log-parser && \
+    echo "* 8 * * * /usr/local/bin/python3 /app/test_service.py >> /app/cron.log 2>&1" >> /etc/cron.d/log-parser && \
     echo "" >> /etc/cron.d/log-parser && \
     chmod 0644 /etc/cron.d/log-parser && \
     crontab /etc/cron.d/log-parser
