--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,204 @@
 # Fichiers Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
 *.pyo
 *.pyd
 
-# Dossiers de logs et fichiers temporaires
-*.log
-cron.log
-.LOG
-# Fichiers d'environnement
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Environnements Python
 .env
-.ERR
-# Dossiers de données persistantes
-pgdata/
-ftp_files/
-
-# Dossiers Docker
-*.tar
-*.pid
-
-# VS Code / IDE
-.vscode/
-.idea/
-*.swp
-
-# Python virtualenv
 .venv/
 env/
 venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Fichiers binaires
+*.bin
+.bin
+
+# Logs et fichiers temporaires
+*.log
+cron.log
+.LOG
+.ERR
+
+# Tests et coverage
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask
+instance/
+.webassets-cache
+
+# Scrapy
+.scrapy
+
+# Documentation
+docs/_build/
+docs/build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+profile_default/
+ipython_config.py
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath
+*.sage.py
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# IDEs
+.vscode/
+.idea/
+*.iws
+*.iml
+*.ipr
+*.code-workspace
+*.sublime-project
+*.sublime-workspace
+*.swp
+*.swo
+
+# Éditeurs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*.lnk
+
+# Docker
+.dockerignore
+*.tar
+*.pid
+
+# Base de données
+*.db
+*.sqlite
+*.sqlite3
+
+# Dossiers de données
+pgdata/
+ftp_files/
+tmp/
+temp/
+.tmp/
+local/
+.local/
+
+# Fichiers de sauvegarde
+*.bak
+*.backup
+*.old
+
+# Configuration sensible
+.env.local
+.env.production
+.env.development
+config.ini
+secrets.json
+
+# Node.js (si utilisé)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Streamlit
+.streamlit/
+
+# Logs d'application
+app.log
+error.log
+access.log
+
+# Profiling
+*.prof
+
+# Vanna
+vanna/*/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt 
