Ajout de nouveaux fichiers de configuration pour l'application GMAO, y compris docker-compose, API, modèles, et schémas. Création de l'initialisation de la base de données et des templates pour l'interface utilisateur. Mise à jour des fichiers README pour inclure des instructions d'installation et d'utilisation.

--- a/E3/.env_exemple.txt
+++ b/E3/.env_exemple.txt
@@ -1,6 +1,6 @@
-POSTGRES_DB=GMAO
-POSTGRES_USER=GMAOUSER
-POSTGRES_PASSWORD=GMAOPSWD
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
@@ -8,5 +8,5 @@ OPENAI_API_KEY=
 VANNA_EMAIL=
 
 # Configuration Langfuse pour le monitoring
-LANGFUSE_PUBLIC_KEY=
-LANGFUSE_SECRET_KEY=
+LANGFUSE_PUBLIC_KEY=pk-
+LANGFUSE_SECRET_KEY=sk-
