--- a/E1/docker-compose.yaml
+++ b/E1/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
         volumes:
             - pgdata:/var/lib/postgresql/data
         ports:
-            - "5432:5432"
+            - "${POSTGRES_PORT}:5432"
         restart: unless-stopped
 
     api:
@@ -36,7 +36,7 @@ services:
         depends_on:
             - db
         environment:
-            - POSTGRES_HOST=db
+            - POSTGRES_HOST=${POSTGRES_HOST}
             - POSTGRES_DB=${POSTGRES_DB}
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
