Mise à jour des chemins des volumes dans docker-compose.yml pour pointer vers les nouveaux répertoires E4/api et E4/UI. Ajout de gestion des erreurs dans train.ipynb pour capturer les interruptions clavier et mise à jour des compteurs d'exécution dans plusieurs cellules. Ajout de nouveaux messages de sortie dans vanna_ai_UI.ipynb pour une meilleure traçabilité des opérations.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
             - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
             - PYTHONUNBUFFERED=1
         volumes:
-            - ./api:/app
+            - ./E4/api:/app
         depends_on:
             postgres:
                 condition: service_healthy
@@ -52,7 +52,7 @@ services:
             - SECRET_KEY=${SECRET_KEY:-dev-secret-key-change-in-production}
             - FLASK_ENV=production
         volumes:
-            - ./UI:/app
+            - ./E4/UI:/app
         depends_on:
             - api
         restart: unless-stopped
