--- a/E1/script/requirements.txt
+++ b/E1/script/requirements.txt
@@ -1,3 +1,6 @@
-psycopg2-binary==2.9.7
-python-dateutil==2.8.2 
-python-dotenv==1.0.1
+sqlalchemy==2.0.23
+pymysql==1.1.0
+psycopg2==2.9.9
+pandas==2.1.3
+apscheduler==3.10.4
+python-dotenv==1.0.0
