--- a/E1/script/Dockerfile
+++ b/E1/script/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
     python3-dev \
     libpq-dev \
+    cron \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
@@ -14,4 +15,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "unified_sync_service.py"]
+# Créer le fichier de log pour cron
+RUN touch /var/log/cron.log
+
+# Donner les permissions d'exécution au script de démarrage
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
+
+# Créer le dossier pour les fichiers cron
+RUN mkdir -p /etc/cron.d
+
+CMD ["/start.sh"]
