--- a/E1/docker-compose.yaml
+++ b/E1/docker-compose.yaml
@@ -46,7 +46,7 @@ services:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
         volumes:
             - mysql_data:/var/lib/mysql
-            - ./commandes/init.sql:/docker-entrypoint-initdb.d/init.sql
+            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
         ports:
             - "3306:3306"
         restart: unless-stopped
@@ -86,9 +86,8 @@ services:
         volumes:
             - ./script:/app
             - ./logs:/app/logs
-        restart: "no"
-        command: >
-            sh -c "sleep 60 && python mysql_sync_service.py"
+        restart: unless-stopped
+
 
     api:
         build: ./api
