--- a/E5/test/docker-compose.yml
+++ b/E5/test/docker-compose.yml
@@ -9,6 +9,8 @@ services:
             POSTGRES_DB: ${POSTGRES_DB}
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_PORT: ${POSTGRES_PORT}
+            POSTGRES_HOST: ${POSTGRES_HOST}
             TZ: Europe/Paris
             # Variables pour le superuser (optionnelles)
             SUPERUSER_USERNAME: ${SUPERUSER_USERNAME:-}
@@ -17,6 +19,8 @@ services:
             SUPERUSER_PASSWORD: ${SUPERUSER_PASSWORD:-}
             SUPERUSER_ROLE: ${SUPERUSER_ROLE:-}
         restart: unless-stopped
+        ports:
+            - "5432:5432"
         env_file:
             - .env
         healthcheck:
@@ -31,8 +35,8 @@ services:
 
     # API FastAPI avec interface web intégrée - IMAGE DOCKER HUB
     api:
-        image: elielecas/gmao-api:buggy
-        # image: elielecas/gmao-api:correct
+        # image: elielecas/gmao-api:buggy
+        image: elielecas/gmao-api:correct
         container_name: gmao-api-web-prod
         ports:
             - "8081:8000" # Interface web sur le port 8080
