--- a/E1/api/requirements.txt
+++ b/E1/api/requirements.txt
@@ -1,8 +1,9 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-pydantic==2.5.0
-sqlalchemy==2.0.23
-alembic==1.13.1
-python-multipart==0.0.6
+fastapi>=0.68.0
+uvicorn>=0.15.0
+sqlmodel>=0.0.8
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.5
+psycopg2-binary>=2.9.3
+python-dotenv>=0.19.0
+email-validator>=2.0.0
