Refactor docker-compose.yaml and env_exemple.txt for improved configuration clarity. Updated healthcheck commands for PostgreSQL and MySQL services to enhance readability. Added SECRET_KEY variable to env_exemple.txt for JWT configuration. Adjusted SECRET_KEY retrieval in utils.py to ensure proper environment variable usage.

--- a/E1/docker-compose.yaml
+++ b/E1/docker-compose.yaml
@@ -30,7 +30,11 @@ services:
             - "${POSTGRES_PORT}:5432"
         restart: unless-stopped
         healthcheck:
-            test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+            test:
+                [
+                    "CMD-SHELL",
+                    "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}",
+                ]
             interval: 10s
             timeout: 5s
             retries: 5
@@ -51,7 +55,17 @@ services:
             - "3306:3306"
         restart: unless-stopped
         healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "fenetre_user", "-ppassword"]
+            test:
+                [
+                    "CMD",
+                    "mysqladmin",
+                    "ping",
+                    "-h",
+                    "localhost",
+                    "-u",
+                    "fenetre_user",
+                    "-ppassword",
+                ]
             interval: 10s
             timeout: 5s
             retries: 5
@@ -81,12 +95,11 @@ services:
             - FTP_USER=${FTP_USER}
             - FTP_PASS=${FTP_PASS}
             # Configuration de la synchronisation
-            - DELETE_AFTER_SYNC=${DELETE_AFTER_SYNC:-false}  # Supprimer les fichiers après traitement
+            - DELETE_AFTER_SYNC=${DELETE_AFTER_SYNC:-false} # Supprimer les fichiers après traitement
         volumes:
             - ./script:/app
             - ./logs:/app/logs
         restart: unless-stopped
-
 
     api:
         build: ./api
@@ -99,6 +112,7 @@ services:
             - POSTGRES_DB=${POSTGRES_DB}
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - SECRET_KEY=${SECRET_KEY:-09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7}
         ports:
             - "8000:8000"
         volumes:
