Refactor docker-compose.yaml, env_exemple.txt, and related scripts to enhance synchronization configuration. Removed script volume mapping in docker-compose.yaml, updated DELETE_AFTER_SYNC variable in env_exemple.txt for clarity, and adjusted logging paths in mysql_sync_service.py to direct logs to a new sync_logs directory. Modified start.sh to ensure correct log directory variable usage in cron job configurations.

--- a/E1/script/Dockerfile
+++ b/E1/script/Dockerfile
@@ -28,5 +28,8 @@ RUN chmod +x /start.sh
 # Créer le dossier pour les fichiers cron
 RUN mkdir -p /etc/cron.d
 
+# Créer le répertoire pour les logs de synchronisation MySQL
+RUN mkdir -p /app/sync_logs
+
 CMD ["/start.sh"]
 # CMD ["python", "mysql_sync_service.py"]
