Enhance logging configuration and directory setup for ftp_log_service. Updated docker-compose.yaml to include sync_logs volume, modified ftp_log_service.py to create log directory and log to a file, and adjusted start.sh to ensure log directories are created at startup and to tail logs from both cron and service logs.

--- a/E1/docker-compose.yaml
+++ b/E1/docker-compose.yaml
@@ -118,6 +118,7 @@ services:
             - DELETE_AFTER_SYNC=${DELETE_AFTER_SYNC:-false} # Supprimer les fichiers après traitement
         volumes:
             - ./logs:/app/logs
+            - ./script/sync_logs:/app/sync_logs
         restart: unless-stopped
 
     api:
