Remove obsolete FastAPI application files and templates
Deleted several files related to the FastAPI application, including app.py, auth.py, create_admin.py, database.py, Dockerfile, and various templates and static assets. This cleanup aims to streamline the project structure and remove unused components, enhancing overall repository clarity and maintainability.

--- a/E3/docker-compose.yml
+++ b/E3/docker-compose.yml
@@ -24,11 +24,11 @@ services:
             - chatbot_network
 
     web:
-        build: .
+        build: ./fastapi
         container_name: chatbot_sav_web
         volumes:
-            - .:/app
-            - ./uploads:/app/uploads
+            - ./fastapi:/app
+            - ./fastapi/uploads:/app/uploads
         ports:
             - "8000:8000"
         environment:
