--- a/E3/fastapi/requirements.txt
+++ b/E3/fastapi/requirements.txt
@@ -8,7 +8,7 @@ sqlalchemy
 
 # Authentification et sécurité
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
 python-multipart==0.0.6
 
 # Templates et interface
