--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 
 on:
     push:
-        branches: [main, develop, feature/*]
+        branches: [main, master, develop, feature/*]
     pull_request:
-        branches: [main]
+        branches: [main, master]
 
 jobs:
     test:
@@ -37,14 +37,14 @@ jobs:
               uses: actions/cache@v3
               with:
                   path: ~/.cache/pip
-                  key: ${{ runner.os }}-pip-${{ hashFiles('fastapi/requirements.txt') }}
+                  key: ${{ runner.os }}-pip-${{ hashFiles('E3/fastapi/requirements.txt') }}
                   restore-keys: |
                       ${{ runner.os }}-pip-
 
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install -r fastapi/requirements.txt
+                  pip install -r E3/fastapi/requirements.txt
 
             - name: Run tests with pytest
               env:
@@ -52,12 +52,12 @@ jobs:
                   SECRET_KEY: test_secret_key_for_ci
                   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
               run: |
-                  cd fastapi
+                  cd E3/fastapi
                   pytest tests/ -v --cov=. --cov-report=term-missing --cov-report=html:htmlcov
 
             - name: Upload coverage reports
               uses: actions/upload-artifact@v3
               with:
                   name: coverage-reports
-                  path: fastapi/htmlcov/
+                  path: E3/fastapi/htmlcov/
                   retention-days: 30
