--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
               uses: actions/cache@v4
               with:
                   path: ~/.cache/pip
-                  key: ${{ runner.os }}-pip-${{ hashFiles('E3/fastapi/requirements.txt') }}
+                  key: ${{ runner.os }}-pip-${{ hashFiles('E3-E4/fastapi/requirements.txt') }}
                   restore-keys: |
                       ${{ runner.os }}-pip-
 
@@ -59,5 +59,5 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                   name: coverage-reports
-                  path: E3/fastapi/htmlcov/
+                  path: E3-E4/fastapi/htmlcov/
                   retention-days: 30
