--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,7 +44,7 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install -r E3/fastapi/requirements.txt
+                  pip install -r E3-E4/fastapi/requirements.txt
 
             - name: Run tests with pytest
               env:
@@ -52,7 +52,7 @@ jobs:
                   SECRET_KEY: test_secret_key_for_ci
                   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
               run: |
-                  cd E3/fastapi
+                  cd E3-E4/fastapi
                   pytest tests/ -v --cov=. --cov-report=term-missing --cov-report=html:htmlcov
 
             - name: Upload coverage reports
