Add admin user configuration to environment variables in Docker and update app initialization
This commit introduces new environment variables for ADMIN_USERNAME, ADMIN_EMAIL, and ADMIN_PASSWORD in the Docker Compose file. Additionally, the FastAPI application is updated to utilize these variables for creating the default admin user, enhancing security and configurability.

--- a/E3-E4/docker-compose.yml
+++ b/E3-E4/docker-compose.yml
@@ -33,6 +33,9 @@ services:
             - DATABASE_URL=postgresql://postgres:password@db:5432/chatbot_sav
             - SECRET_KEY=your-super-secret-key-change-in-production
             - OPENAI_API_KEY=${OPENAI_API_KEY}
+            - ADMIN_USERNAME=${ADMIN_USERNAME}
+            - ADMIN_EMAIL=${ADMIN_EMAIL}
+            - ADMIN_PASSWORD=${ADMIN_PASSWORD}
         depends_on:
             db:
                 condition: service_healthy
