--- a/E3-E4/docker-compose.yml
+++ b/E3-E4/docker-compose.yml
@@ -11,7 +11,6 @@ services:
             POSTGRES_HOST_AUTH_METHOD: trust
         volumes:
             - chatbot_postgres_data:/var/lib/postgresql/data
-            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U postgres -d chatbot_sav"]
             interval: 10s
@@ -33,6 +32,9 @@ services:
             - DATABASE_URL=postgresql://postgres:password@db:5432/chatbot_sav
             - SECRET_KEY=your-super-secret-key-change-in-production
             - OPENAI_API_KEY=${OPENAI_API_KEY}
+            - ADMIN_USERNAME=${ADMIN_USERNAME}
+            - ADMIN_EMAIL=${ADMIN_EMAIL}
+            - ADMIN_PASSWORD=${ADMIN_PASSWORD}
         depends_on:
             db:
                 condition: service_healthy
