Use passlib for password hashing

--- a/E3-E4/fastapi/requirements.txt
+++ b/E3-E4/fastapi/requirements.txt
@@ -9,6 +9,7 @@ sqlalchemy
 # Authentification et sécurité
 python-jose[cryptography]==3.3.0
 bcrypt==4.1.2
+passlib
 python-multipart==0.0.6
 
 # Templates et interface
