--- a/E3-E4/fastapi/requirements.txt
+++ b/E3-E4/fastapi/requirements.txt
@@ -40,6 +40,7 @@ joblib
 
 # Requêtes HTTP
 requests
+httpx<0.28
 
 # Tests (pour le développement)
 pytest>=7.4.0
@@ -54,4 +55,4 @@ fuzzywuzzy
 alembic==1.12.1
 
 # CORS (pour les requêtes cross-origin)
-fastapi-cors==0.0.6 
+fastapi-cors==0.0.6
