--- a/E3-E4/fastapi/requirements.txt
+++ b/E3-E4/fastapi/requirements.txt
@@ -8,8 +8,8 @@ sqlalchemy
 
 # Authentification et sécurité
 python-jose[cryptography]==3.3.0
-bcrypt==4.1.2
-passlib
+bcrypt==4.0.1
+passlib[bcrypt]
 python-multipart==0.0.6
 
 # Templates et interface
