--- a/E3-E4/docker-compose.yml
+++ b/E3-E4/docker-compose.yml
@@ -35,6 +35,7 @@ services:
             - ADMIN_USERNAME=${ADMIN_USERNAME}
             - ADMIN_EMAIL=${ADMIN_EMAIL}
             - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+            - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES}
         depends_on:
             db:
                 condition: service_healthy
