--- a/E1/docker-compose.yaml
+++ b/E1/docker-compose.yaml
@@ -46,6 +46,8 @@ services:
             POSTGRES_DB: ${POSTGRES_DB}
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        ports:
+            - "${POSTGRES_PORT}:5432"
         volumes:
             - pgdata:/var/lib/postgresql/data
         restart: unless-stopped
